<resources>
    <string name="app_name">Pirate Places</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
    <string name="already_at_end">You are already on the last place</string>
    <string name="already_at_start">You are already on the first place</string>
    <string name="check_in_button">Check In!</string>
    <string name="place_image">Image of place</string>
    <string name="place_images">Recent Images</string>
    <string name="place_name">Place Name</string>
    <string name="last_visited_date">Last Visited</string>
    <string name="place_name_hint">Enter place name</string>
    <string name="last_visited_date_hint">Click button to set date</string>
    <string name="title_activity_pirate_place_pager">PiratePlacePagerActivity</string>
    <string name="edit_date">Edit Date</string>
    <string name="edit_time">Edit Time</string>
    <string name="date_picker_title">Date Last Visited:</string>
    <string name="time_picker_title">Time Last Visited:</string>
    <string name="add_place">New Place</string>
    <string name="delete_place">Delete Place</string>
    <string name="send_to_friend">Send to Friend</string>
    <string name="message_subject">Just visited a PiratePlace</string>
    <string name="message_text">I just visited %1$s on %2$s at %3$s!</string>
    <string name="send_message_title">Send message via</string>
    <string name="take_picture">Take Picture</string>
</resources>
