<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="edu.ecu.cs.pirateplaces.PiratePlaceViewModel"/>
    </data>
<LinearLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_name"/>

    <EditText
        android:id="@+id/pirate_place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_name_hint"
        android:text="@={viewModel.placeName}"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_visited_date"/>

    <EditText
        android:id="@+id/pirate_place_last_visited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_visited_date_hint"
        android:text="@={viewModel.lastVisited}"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/edit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_date"/>
        <Button
            android:id="@+id/edit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_time"/>
    </LinearLayout>

    <Button
        android:id="@+id/check_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_in_button"
        android:textAlignment="center"
        android:drawablePadding="4dp"/>

    <Button
        android:id="@+id/send_to_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_to_friend"
        android:textAlignment="center"
        android:drawablePadding="4dp"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/place_images"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/pirate_place_images_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
</layout>