<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/pirate_place_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@android:drawable/btn_star"
        android:contentDescription="@string/place_image"/>

    <TextView
        android:id="@+id/pirate_place_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/place_name"
        app:layout_constraintLeft_toRightOf="@+id/pirate_place_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.473"/>

    <TextView
        android:id="@+id/pirate_place_last_visited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/last_visited_date"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/pirate_place_name"
        app:layout_constraintLeft_toRightOf="@+id/pirate_place_image"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>